--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,8 @@
 *.exe
 *.identcache
 Examples/ComExample/ComExample.dproj
-Source/__history/CPort.pas.~1~
+*/__history/*
+Packages/102T/__history/CPort_D.dpk.~2~
+Packages/102T/__history/CPort_D.dpk.~1~
+Packages/102T/__history/CPort_D.dpk.~3~
+Packages/102T/__history/CPortNonOficial.dpk.~1~
