--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Packages/102T/__history/CPort_D.dpk.~2~
 Packages/102T/__history/CPort_D.dpk.~1~
 Packages/102T/__history/CPort_D.dpk.~3~
 Packages/102T/__history/CPortNonOficial.dpk.~1~
+NonOficial/Readme.html
